fix jumping share container height issue

--- a/app/assets/stylesheets/share.scss
+++ b/app/assets/stylesheets/share.scss
@@ -3,7 +3,7 @@
   background-color: #ffffff;
   padding-left: 25px;
   padding-right: 25px;
-  padding-bottom: 10px;
+  padding-bottom: 25px;
 }
 
 .share-header {
@@ -18,6 +18,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  height: 15px;
 }
 
 .share-label {
@@ -62,7 +63,6 @@
   padding: 5px;
   font-family: 'Colfax-Medium';
   font-size: 12px;
-  padding-left: 5px;
 }
 
 .link-input:focus {
